--- a/views/header.html
+++ b/views/header.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<!--  -->
+
+
+
 <head>
     <meta charset="utf-8">
     <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
@@ -28,10 +34,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.29.0/dist/umd/supabase.js"></script>
 
     <!-- CSS Style Sheet -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
 </head>
 
 <header>
 
 </header>
+
+
+
+
+
+<!--  -->
+</html>
