--- a/views/header.html
+++ b/views/header.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Responsive web design:https://www.w3schools.com/css/css_rwd_viewport.asp-->
 
-    <link rel="icon" href="">
+    <link rel="icon" href="../img/graphics/LogoOQ4.png">
     <!--Tab image-->
 
     <!--MAXcdn:-->
