--- a/views/header.html
+++ b/views/header.html
@@ -39,6 +39,9 @@
 </head>
 
 <header>
+    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+    <a href="../views/profile.html">
+        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
 </header>
 
@@ -47,4 +50,5 @@
 
 
 <!--  -->
+
 </html>
