Add issue Margin-right header profile-icon #1

--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,9 @@ header {
   height: 65px;
   width: 100vw;
   background-color: var(--primary);
-/*   display: flex;
- */  }
+  /*   display: flex;
+ */
+}
 
 #header_logo {
   height: 34;
@@ -70,6 +71,7 @@ header {
 }
 
 #profile_icon {
+  /* #1 */
   height: 34px;
   width: 34px;
   margin-top: 16px;
