Add issue Margin-right header profile-icon #1

--- a/styles.css
+++ b/styles.css
@@ -59,9 +59,8 @@ header {
   height: 65px;
   width: 100vw;
   background-color: var(--primary);
-  /*   display: flex;
- */
-}
+/*   display: flex;
+ */  }
 
 #header_logo {
   height: 34;
@@ -71,11 +70,10 @@ header {
 }
 
 #profile_icon {
-  /* #1 */
   height: 34px;
   width: 34px;
   margin-top: 16px;
-  margin-right: 40px;
+  margin-right: 40px; /* #1 Todo @y-neck: fix margin-right */
 }
 
 main {
