--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ header {
   width: 34px;
   margin-top: 16px;
   margin-left: 40px;
+  float: left; /* Forces logo to appear on left */
 }
 
 #profile_icon {
@@ -75,7 +76,7 @@ header {
   width: 34px;
   margin-top: 16px;
   margin-right: 40px;
-  float: right; /* Forces icon to appear on right*/
+  float: right; /* Forces icon to appear on right; reference #header_logo:float*/
 }
 
 main {
