--- a/views/footer.html
+++ b/views/footer.html
@@ -1,1 +1,11 @@
-<footer></footer>
+<head>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+
+<!-- TODO: DELETE HEAD @y-neck-->
+
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+</footer>
