--- a/views/profile.html
+++ b/views/profile.html
@@ -36,9 +36,20 @@
     <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
     <a href="../views/profile.html">
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+    <!-- TODO: @y-neck change icons (back to quest and edit profile(-> fontAwesome icons)) -->
 </header>
 
 <main>
+    <div id="profile_picture"><img src="../img/graphics/profile.png" alt="Profilbild"></div>
+    <!-- TODO: @y-neck Add functionality to retrieve profile picture from database -->
+    <h1 id="profile_username">User</h1>
+    <div id="profile_questpoints">
+        <p>Du hast schon</p>
+        <span id="profile_questpoints_number">0</span>
+        <!-- TODO: @y-neck Add functionality to retrieve questpoints from database -->
+        <p>Quests geschafft!</p>
+    </div>
+    <div id="profile_gallery"></div>
 
 </main>
 
