--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ a {
   color: var(--accent, yellow);
 }
 
-/* H2 Heading */
+/* Heading */
 h1 {
   text-align: center;
   font-family: 'Urbanist', sans-serif;
