--- a/views/login.html
+++ b/views/login.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Login</h1>
+    <button>Username</button>
+    <button>Password</button>
+    <button>Login</button>
+    <p>Noch kein Konto?</p>
+
 </body>
 </html>
