--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,13 @@ footer a {
 }
 
 /* Home */
+#Heutige_Quest_1 {
+  margin: 50px 0px 25px 0px;
+}
+
+#Heutige_Quest_2 {
+  margin: 0px 0px 50px 0px;
+}
 
 /* Login */
 
