--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+     <!-- CSS Style Sheet -->
+     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Login</h1>
-    <button>Username</button>
-    <button>Password</button>
-    <button>Login</button>
+    <button class="login_button">Username</button>
+    <button class="login_button">Password</button>
+    <button class="login_button">Login</button>
     <p>Noch kein Konto?</p>
 
 </body>
