--- a/views/header.html
+++ b/views/header.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="de" dir="ltr">
+<!--Default language german, reading from l. to r.-->
+
 <head>
     <meta charset="utf-8">
     <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
