--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body {
   height: 100%;
   font-family: 'Urbanist', sans-serif;
   font-size: 1rem;
+  min-height: 100vh;
   /* Define default font size [rem]*/
 }
 
@@ -103,6 +104,7 @@ header {
 /* Footer */
 footer {
   flex-shrink: 0; /* Force footer to end of page */
+  position: sticky;
   width: 100vw;
   height: 65px;
   background-color: var(--primary);
