--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,12 @@ footer a {
   margin: 50px 0px 25px 0px;
 }
 
+#Heutige_Quest_2 {
+  margin: 50px 0px 25px 0px;
+}
+
+
+
 /* Register */
 
 /* Profile page */
