--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,12 @@ footer a {
   margin: 50px 0px 25px 0px;
 }
 
-
+.quest_Images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; /* 3 columns with equal width */
+  grid-template-rows: auto auto auto; /* 3 rows with automatic height */
+  grid-gap: 10px; /* spacing between grid cells */
+}
 
 /* Register */
 
