--- a/views/login.html
+++ b/views/login.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <h1>Login</h1>
-    
+
 <div class="button-container">
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
-    <button class="login_button">Login</button>
+    <button class="login_buttonSmoll">Login</button>
     <p>Noch kein Konto?</p>
 </div>
 
