--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@
 <div class="button-container">
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
-    <button class="login_buttonSmoll">Login</button>
+    <button class="login_buttonS">Login</button>
     <p>Noch kein Konto?</p>
 </div>
 
