--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Login</h1>
 
-<div class="button-container">
+<div class="button-containerLogin">
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
     <button class="login_buttonS">Login</button>
