--- a/views/login.html
+++ b/views/login.html
@@ -12,10 +12,11 @@
     <h1>Login</h1>
 
 <div class="button-container">
+    <button class="login_button">Mail</button>
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
-    <button class="login_buttonS">Login</button>
-    <p>Noch kein Konto?</p>
+    <button class="login_buttonS">Register</button>
+   
 </div>
 
 
