--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>Registrieren</h1>
 
 <div class="button-container">
     <button class="login_button">Mail</button>
