--- a/views/register.html
+++ b/views/register.html
@@ -12,6 +12,7 @@
     <h1>Registrieren</h1>
 
 <div class="button-container">
+    <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail-icon">
     <button class="login_button">Mail</button>
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
