--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ footer a {
 /* Profile page */
 #profile_picture {
   border-radius: 114px;
-  background: var(--secondary, #fff);
+  background: var(--secondary);
   margin-top: 42px;
   margin-bottom: 5px;
   width: 114px;
