--- a/views/register.html
+++ b/views/register.html
@@ -9,10 +9,11 @@
      <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Registrieren</h1>
+   
 
 <div class="button-container">
-    <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail-icon">
+    <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail_icon">
+     <h1>Registrieren</h1>
     <button class="login_button">Mail</button>
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
