--- a/views/register.html
+++ b/views/register.html
@@ -13,7 +13,7 @@
 
 <div class="button-container">
     <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail_icon">
-     <h1>Registrieren</h1>
+     <h1 class="login_text">Registrieren</h1>
     <button class="login_button">Mail</button>
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
