--- a/views/profile.html
+++ b/views/profile.html
@@ -63,4 +63,8 @@
     <a href="../views/about.html" target="_blank">About</a>
 </footer>
 
+<!-- Import supabase -->
+<script type='module' src=" ../00_setup/supabase.js"></script>
+<script type="module" src="./01_api/supabase_api.js"></script>
+
 </html>
