--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,7 @@ footer a {
 .button-container {
   display: flex;
   flex-direction: column;
+  margin: 25px;
 }
 
 .login_button {
@@ -208,6 +209,7 @@ footer a {
   border: none;
   cursor: pointer;
   color: var(--text);
+  
 }
 
 .login_buttonS {
@@ -227,3 +229,6 @@ footer a {
   height: 114px;
 }
 
+.login_text{
+
+}
