--- a/views/register.html
+++ b/views/register.html
@@ -14,9 +14,13 @@
 <div class="button-container">
     <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail_icon">
      <h1 class="login_text">Registrieren</h1>
-    <button class="login_button">Mail</button>
-    <button class="login_button">Username</button>
-    <button class="login_button">Password</button>
+     
+    <div id="register_input">
+        <button class="login_button">Mail</button>
+        <button class="login_button">Username</button>
+        <button class="login_button">Password</button>
+    </div>
+    
     <button class="login_buttonS">Register</button>
    
 </div>
