--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ footer a {
   flex-shrink: 0;
   border-radius: 8px;
   background: var(--secondary);
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border: none;
   cursor: pointer;
   color: var(--text);
@@ -236,4 +236,5 @@ footer a {
 #register_input{
   display: flex;
   flex-direction: column;
+  margin: 25px;
 }
