--- a/views/login.html
+++ b/views/login.html
@@ -12,9 +12,13 @@
     <h1>Login</h1>
 
 <div class="button-container">
+
+<div id="login_input">
     <button class="login_button">Username</button>
     <button class="login_button">Password</button>
-    <button class="login_buttonS">Login</button>
+</div>
+
+<button class="login_buttonS">Login</button>
     <p>Noch kein Konto?</p>
 </div>
 
