--- a/views/login.html
+++ b/views/login.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang="de" dir="ltr">
+<!--Default language german, reading from l. to r.-->
 
-     <!-- CSS Style Sheet -->
-     <link rel="stylesheet" href="../styles.css">
+<head>
+    <meta charset="utf-8">
+    <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
+    <title></title>
+    <!--Tab title-->
+    <meta name="description" content="">
+    <!--Description of web page-->
+    <meta name="keywords" content="">
+    <!--define keywords for search engines-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Responsive web design:https://www.w3schools.com/css/css_rwd_viewport.asp-->
+
+    <link rel="icon" href="../img/graphics/LogoOQ4.png">
+    <!--Tab image-->
+
+    <!--MAXcdn:-->
+    <!--jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--FontAwesome Free-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Urbanist">
+
+    <!-- supabase cdns-->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.29.0/dist/umd/supabase.js"></script>
+
+    <!-- CSS Style Sheet -->
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
+
+<header>
+    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+    <a href="../views/profile.html">
+        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+
+</header>
+
 <body>
     <h1>Login</h1>
 
