My Foot in your HTML

--- a/views/login.html
+++ b/views/login.html
@@ -57,6 +57,10 @@
     <p>Noch kein Konto?</p>
 </div>
 
-
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+</footer>
 </body>
 </html>
