Even more FOOTer

--- a/views/register.html
+++ b/views/register.html
@@ -14,7 +14,7 @@
 <div class="button-container">
     <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail_icon">
      <h1 class="login_text">Registrieren</h1>
-     
+
     <div id="register_input">
         <button class="login_button">Mail</button>
         <button class="login_button">Username</button>
@@ -25,6 +25,10 @@
    
 </div>
 
-
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+</footer>
 </body>
 </html>
