--- a/views/register.html
+++ b/views/register.html
@@ -47,7 +47,7 @@
    
 
 <div class="button-container">
-    <img src="../img/graphics/profile.png" alt="Mail Icon" class="mail_icon">
+    <img src="../img/graphics/profile_icon.svg" alt="Mail Icon" class="mail_icon">
      <h1 class="login_text">Registrieren</h1>
 
     <div id="register_input">
