--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,12 @@ footer a {
   grid-gap: 10px; /* spacing between grid cells */
 }
 
+#quest_checkbox {
+  height: 100px;
+  border: 5px var(--primary);
+}
+
+
 /* Register */
 
 /* Profile page */
