--- a/views/profile.html
+++ b/views/profile.html
@@ -36,11 +36,11 @@
 
 </head>
 
-<header>
-    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
-    <a href="../views/profile.html">
-        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
-    <!-- TODO: @y-neck change icons (back to quest and edit profile(-> fontAwesome icons)) -->
+<header id="profile_header">
+    <a id="backToHome" class="profile_headerIcon" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html">
+        <i class="fa-solid fa-pencil"></i></a>
+        <!-- TODO: @y-neck change icons (back to quest and edit profile(-> fontAwesome icons)) -->
 </header>
 
 <main>
