--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,19 @@ footer a {
   border: 5px var(--primary);
 }
 
+
+input[type="file"]{
+  display: none;
+}
+
+#quest_checkbox {
+  padding: 0;
+  background: none;
+  height: 100px;
+  border: 5px var(--primary);
+}
+
+
 /* Register */
 
 /* Profile page */
