--- a/styles.css
+++ b/styles.css
@@ -158,9 +158,9 @@ footer a {
   border: 5px var(--primary);
 }
 
-
 #quest_checkbox {
   all: unset;
+  background: var(--secondary);
   height: 100px;
   border: 5px var(--primary);
 }
