--- a/styles.css
+++ b/styles.css
@@ -154,15 +154,10 @@ footer a {
 }
 
 #quest_checkbox {
-  height: 100px;
-  border: 5px var(--primary);
-}
-
-#quest_checkbox {
-  all: unset;
   background: var(--secondary);
   height: 100px;
-  border: 5px var(--primary);
+  width: 100px;
+  border: 10px var(--primary);
 }
 
 /* Register */
