fixed broken link

--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -43,7 +43,7 @@
         <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html"><i
                 class="fa-solid fa-check"></i></a></button>
 
-    <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html">
+    <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html"></a>
 
 </header>
 
