--- a/views/login.html
+++ b/views/login.html
@@ -44,7 +44,7 @@
 </header>
 
 <body>
-    <h1>Login</h1>
+    <h1 id="login_top">Login</h1>
 
 <div class="button-container">
 
@@ -54,8 +54,8 @@
 </div>
 
 <button class="login_buttonS">Login</button>
-    <p>Noch kein Konto?</p>
 </div>
+<a href="../views/register.html">Noch kein Konto?</a>
 
 <footer>
     <a href="../views/impressum.html" target="_blank">Impressum</a>
