--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -49,15 +49,13 @@
 
 <main>
     <div id="profile_picture"><img src="../img/graphics/profile.png" alt="Profilbild"></div>
-    <!-- TODO: @y-neck Add functionality to retrieve profile picture from database -->
-    <h1 id="profile_username">User</h1>
-    <div id="profile_questpoints">
-        <p>Du hast schon</p>
-        <span id="profile_questpoints_number">0</span>
-        <!-- TODO: @y-neck Add functionality to retrieve questpoints from database -->
-        <p>Quests geschafft!</p>
+    <!-- TODO: @y-neck Add functionality to retrieve or update profile picture -->
+    <div id="editProfile_inputs">
+        <!-- TODO: @y-neck Add functionality to retrieve or update Username/pw -->
+        <input type="text" id="editUsername" placeholder="Benutzername">
+        <input type="password" id="editPassword" placeholder="Neues Passwort">
+        <button id="deleteProfile">Profil löschen</button>
     </div>
-    <div id="profile_gallery"></div>
 
 </main>
 
