size of images fixed

--- a/styles.css
+++ b/styles.css
@@ -155,12 +155,8 @@ footer a {
 
 .quest_Images img {
   width: calc(100vw / 3);
-  height: auto;
+  height: calc(100vw / 3);
   object-fit: cover;
-}
-.quest_Images img {
-  width: 100px;
-  height: 100px;
 }
 
 .checkbox {
