--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -37,13 +37,7 @@
 </head>
 
 <header id="profile_header">
-    <a id="backToHome" class="profile_headerIcon" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-
-    <button id="profile_confirmChanges">
-        <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html"><i
-                class="fa-solid fa-check"></i></a></button>
-
-    <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html"></a>
+    <a id="profile_confirmChanges" class="profile_headerIcon" href="../views/profile.html"><i class="fa-solid fa-check"></i></a>
 
 </header>
 
