--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -61,6 +61,6 @@
 
 <!-- Import supabase -->
 <script type='module' src=" ../00_setup/supabase.js"></script>
-<script type="module" src="./01_api/supabase_api.js"></script>
+<script type="module" src="../01_api/supabase_api.js"></script>
 
 </html>
