--- a/views/header.html
+++ b/views/header.html
@@ -33,6 +33,8 @@
 
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="../styles.css">
+    <!-- JS -->
+    <script src="../script.js"></script>
 
 </head>
 
