edit fn getUsername

--- a/views/profile.html
+++ b/views/profile.html
@@ -33,7 +33,8 @@
 
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="../styles.css">
-
+    <!-- JS -->
+    <script src="../script.js"></script>
 </head>
 
 <header id="profile_header">
@@ -65,5 +66,7 @@
 <!-- Import supabase -->
 <script type='module' src=" ../00_setup/supabase.js"></script>
 <script type="module" src="../01_api/supabase_api.js"></script>
+<!-- JS -->
+<script src="../script.js"></script>
 
 </html>
