--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ footer a {
   display: none;
   justify-content: center;
   align-items: center;
+  margin: 50px 0px 50px 0px;
 }
 
 /* Register */
