--- a/views/profile.html
+++ b/views/profile.html
@@ -67,6 +67,6 @@
 <script type='module' src=" ../00_setup/supabase.js"></script>
 <script type="module" src="../01_api/supabase_api.js"></script>
 <!-- JS -->
-<script src="../script.js"></script>
+<script src="../script.js" type="module"></script>
 
 </html>
