--- a/views/profile.html
+++ b/views/profile.html
@@ -37,36 +37,39 @@
     <script src="../script.js"></script>
 </head>
 
-<header id="profile_header">
-    <a id="backToHome" class="profile_headerIcon" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html">
-        <i class="fa-solid fa-pencil"></i></a>
-</header>
+<body>
+    <header id="profile_header">
+        <a id="backToHome" class="profile_headerIcon" href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a id="editProfileIcon" class="profile_headerIcon" href="../views/editProfile.html">
+            <i class="fa-solid fa-pencil"></i></a>
+    </header>
 
-<main>
-    <div id="profile_picture"><img src="../img/graphics/profile.png" alt="Profilbild"></div>
-    <!-- TODO: @y-neck Add functionality to retrieve profile picture from database -->
-    <h1 id="profile_username">User</h1>
-    <div id="profile_questpoints">
-        <p>Du hast schon</p>
-        <span id="profile_questpoints_number">0</span>
-        <!-- TODO: @y-neck Add functionality to retrieve questpoints from database -->
-        <p>Quests geschafft!</p>
-    </div>
-    <div id="profile_gallery"></div>
+    <main>
+        <div id="profile_picture"><img src="../img/graphics/profile.png" alt="Profilbild"></div>
+        <!-- TODO: @y-neck Add functionality to retrieve profile picture from database -->
+        <h1 id="profile_username">User</h1>
+        <div id="profile_questpoints">
+            <p>Du hast schon</p>
+            <span id="profile_questpoints_number">0</span>
+            <!-- TODO: @y-neck Add functionality to retrieve questpoints from database -->
+            <p>Quests geschafft!</p>
+        </div>
+        <div id="profile_gallery"></div>
 
-</main>
+    </main>
 
-<footer>
-    <a href="../views/impressum.html" target="_blank">Impressum</a>
-    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
-    <a href="../views/about.html" target="_blank">About</a>
-</footer>
+    <footer>
+        <a href="../views/impressum.html" target="_blank">Impressum</a>
+        <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+        <a href="../views/about.html" target="_blank">About</a>
+    </footer>
 
-<!-- Import supabase -->
-<script type='module' src=" ../00_setup/supabase.js"></script>
-<script type="module" src="../01_api/supabase_api.js"></script>
-<!-- JS -->
-<script src="../script.js" type="module"></script>
+    <!-- Import supabase -->
+    <script type='module' src=" ../00_setup/supabase.js"></script>
+    <script type="module" src="../01_api/supabase_api.js"></script>
+    <!-- JS -->
+    <script src="../script.js" type="module"></script>
+
+</body>
 
 </html>
