fix html structure

--- a/views/header.html
+++ b/views/header.html
@@ -37,6 +37,8 @@
     <script src="../script.js"></script>
 
 </head>
+<body>
+    
 
 <header>
     <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
@@ -44,3 +46,4 @@
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
 
 </header>
+</body>
