--- a/views/profile.html
+++ b/views/profile.html
@@ -67,7 +67,7 @@
     <script type="module" src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
     <!-- JS -->
-    <script src="../script.js" type="module"></script>
+    <script src="../script.js" type="module"></script> <!-- Require type="module" when working with imports in the js file -->
 
 </body>
 
