--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -64,6 +64,7 @@
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
+    <script src="../mainUser.js" type="module"></script>
 </body>
 
 </html>
