Import supabase and mainUser.js

--- a/views/profile.html
+++ b/views/profile.html
@@ -68,6 +68,7 @@
     <script type="module" src="../01_api/supabase_api.js"></script>
     <!-- JS -->
     <script src="../mainUser.js" type="module"></script> <!-- Require type="module" when working with imports in the js file -->
+    <script src="../03_scripts/profile.js" type="module"></script>
 
 </body>
 
