Fix input fields

--- a/views/register.html
+++ b/views/register.html
@@ -51,12 +51,12 @@
         <h1 class="login_text">Registrieren</h1>
 
         <div id="register_input">
-            <button class="login_button">Mail</button>
-            <button class="login_button">Username</button>
-            <button class="login_button">Password</button>
+            <input type="text" id="registerEmail" placeholder="Email" required>
+            <input type="text" id="registerUsername" placeholder="Benutzername" required>
+            <input type="password" id="registerPassword" placeholder="Passwort" required>
         </div>
 
-        <button class="login_buttonS">Register</button>
+        <button class="login_buttonS" id="registerButton">Registrieren</button>
 
     </div>
 
