--- a/views/register.html
+++ b/views/register.html
@@ -34,6 +34,8 @@
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="../styles.css">
 
+    <script type="module" src="../views/register.js"></script>
+
 </head>
 
 <header>
@@ -56,7 +58,7 @@
             <input type="password" id="registerPassword" placeholder="Passwort" required>
         </div>
 
-        <button class="login_buttonS" id="registerButton">Registrieren</button>
+        <button class="login_buttonS" id="registerButton" onclick="registerUser()">Registrieren</button>
 
     </div>
 
@@ -71,6 +73,7 @@
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
     <script src="../mainUser.js" type="module"></script>
+    
 </body>
 
 </html>
