--- a/views/register.html
+++ b/views/register.html
@@ -33,12 +33,12 @@
 
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="../styles.css">
-
+<script type="module" src="../03_scripts/register.js"></script>
     
 </head>
 
 <header>
-    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+    <a href="../index.html"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
     <a href="../views/profile.html">
         <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
         
@@ -72,7 +72,7 @@
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="../01_api/supabase_api.js"></script>
     <script src="../mainUser.js" type="module"></script>
-    <script type="module" src="../03_scripts/register.js"></script>
+    
     
 </body>
 
